overflow-x and font size fixes

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 html {
 	overflow-x: hidden;
 	height: 100%;
-	font-size: 60%;
+	font-size: 40%;
 }
 
 body {
